Fixed the duplicate genres that was displaying in the genres. Currently working on getting the data to display on the search of a book

--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -40,7 +40,12 @@
 </nav>
 
 <!==== NavBar Search For Books ====>
-<div id="results"></div>
+<div id="results" th:if="${apiResponse != null}">
+    <p  th:text="${apiResponse.totalItems}"></p>
+</div>
+
+
+
 
 
 <!===== Hero Section =====>
