--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -40,8 +40,15 @@
 </nav>
 
 <!==== NavBar Search For Books ====>
-<div id="results" th:if="${apiResponse != null}">
-    <p  th:text="${apiResponse.totalItems}"></p>
+<div id="results" th:if="${apiResponse != null}" class="d-flex overflow-scroll container position-relative" >
+    <!===== Book Section =====>
+    <section class="mx-3 book-container" th:each="apiCall : ${apiResponse.get('items')}">
+        <img th:src="${apiCall.get('volumeInfo').get('imageLinks').get('smallThumbnail').asText()}" th:alt="${apiCall.get('volumeInfo').get('title').asText()}" class="cover-page ">
+        <p class="book-info-container">
+            <span th:text="${apiCall.get('volumeInfo').get('title').asText()}" class="book-title">Title of Book</span> <br />
+            <small>By </small><small th:text="${apiCall.get('volumeInfo').get('authors').get(0).asText()}" class="\">Title of Book</small>
+        </p>
+    </section>
 </div>
 
 
