--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -22,8 +22,8 @@
             <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
                 <!===== Search Bar =====>
                 <li class="">
-                    <form id="searchForm" role="search" th:action="@{/process-search}" method="post" class="d-flex" >
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" name="searchTerm">
+                    <form id="searchForm" role="search" th:action="@{/process-search}" method="post" class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" name="searchTerm" th:value="${searchTerm}">
                     </form>
                 </li>
                 <!== Main Page ==>
@@ -42,13 +42,16 @@
 <!==== NavBar Search For Books ====>
 <div id="results" th:if="${apiResponse != null}" class="d-flex overflow-scroll container position-relative" >
     <!===== Book Section =====>
+    <!-- Book Section -->
     <section class="mx-3 book-container" th:each="apiCall : ${apiResponse.get('items')}">
-        <img th:src="${apiCall.get('volumeInfo').get('imageLinks').get('smallThumbnail').asText()}" th:alt="${apiCall.get('volumeInfo').get('title').asText()}" class="cover-page ">
+        <img th:if="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail')}" th:src="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail').asText()}" th:alt="${apiCall.get('volumeInfo')?.get('title').asText()}" class="cover-page">
+        <img th:unless="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail')}" th:src="@{img/noImage.jpeg}" th:alt="${apiCall.get('volumeInfo')?.get('title').asText()}" class="cover-page">
         <p class="book-info-container">
-            <span th:text="${apiCall.get('volumeInfo').get('title').asText()}" class="book-title">Title of Book</span> <br />
-            <small>By </small><small th:text="${apiCall.get('volumeInfo').get('authors').get(0).asText()}" class="\">Title of Book</small>
+            <span th:text="${apiCall.get('volumeInfo')?.get('title').asText()}" class="book-title">Title of Book</span> <br />
+            <small th:text="${apiCall.get('volumeInfo')?.get('authors')?.get(0)?.asText('Unknown Author')}" class="author">Author</small>
         </p>
     </section>
+
 </div>
 
 
@@ -146,9 +149,8 @@
 
 
 
+<script src="/js/myModule.js"></script>
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
-<!== Javascript Input Value ==>
-
 </body>
 </html>
