--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -17,12 +17,11 @@
         </button>
         <!== Drop Down ==>
         <div class="collapse navbar-collapse mt-3 mt-lg-0" id="navbarNavDropdown">
-
             <!==== Nav Links ====>
             <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
                 <!===== Search Bar =====>
                 <li class="">
-                    <form id="searchForm" role="search" th:action="@{/process-search}" method="post" class="d-flex">
+                    <form id="searchForm" role="search" th:action="@{/welcome-page}" method="post" class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" name="searchTerm" th:value="${searchTerm}">
                     </form>
                 </li>
@@ -39,22 +38,15 @@
     </div>
 </nav>
 
-<!==== NavBar Search For Books ====>
-<div id="results" th:if="${apiResponse != null}" class="d-flex overflow-scroll container position-relative">
-    <!===== Book Section =====>
-    <!-- Book Section -->
-    <section class="mx-3 book-container" th:each="apiCall : ${apiResponse.get('items')}">
-        <img th:if="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail')}" th:src="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail').asText()}" th:alt="${apiCall.get('volumeInfo')?.get('title').asText()}" class="cover-page">
-        <img th:unless="${apiCall.get('volumeInfo')?.get('imageLinks')?.get('smallThumbnail')}" th:src="@{img/noImage.jpeg}" th:alt="${apiCall.get('volumeInfo')?.get('title').asText()}" class="cover-page">
-        <p class="book-info-container">
-            <span th:text="${apiCall.get('volumeInfo')?.get('title').asText()}" class="book-title">Title of Book</span> <br />
-            <small th:text="${apiCall.get('volumeInfo')?.get('authors')?.get(0)?.asText('Unknown Author')}" class="author">Author</small>
-        </p>
-    </section>
+<!==== Search Results For Books & Spinner ====>
+<!-- Loading spinner -->
+<div id="loading-spinner"  style="display: none;">
+    <div class="spinner"></div>
 </div>
-
-
-
+<!-- NavBar Fragment -->
+<div id="searchResultsFragment" >
+    <div th:replace="partials/searchResults :: results"></div>
+</div>
 
 <!===== Hero Section =====>
 <main id="hero-main-page" class="container-fluid d-flex align-items-center">
@@ -142,11 +134,8 @@
     </div>
 </div>
 
-
-
-
-
-
+<!=== Javascript ===>
+<script src="/js/myModule.js" type="application/javascript"></script>
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
 </body>
