Styled the search book display

--- a/src/main/resources/static/css/myStylesheet.css
+++ b/src/main/resources/static/css/myStylesheet.css
@@ -1,6 +1,7 @@
 @import "aboutStylesheet.css";
 @import "signinStylesheet.css";
 @import "mainPageStylesheet.css";
+@import "searchBookResultsStylesheet.css";
 
 
 
