--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -8,19 +8,27 @@
 
 <!===== NavBar ====>
 <nav class="navbar navbar-expand-lg bg-body-tertiary py-3" th:fragment="Navbar">
-    <div class="container">
+    <div class="container d-flex flex-nowrap">
         <!== Nav Title ==>
         <span class="navbar-brand"><a th:href="@{/}" class="text-decoration-none">Bookworm</a></span>
-        <!== Button ==>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="d-flex flex-nowrap">
+            <!===== Search Bar =====>
+            <section class="d-block d-lg-none ms-auto">
+                <form id="searchForm" role="search" th:action="@{/welcome-page}" method="post" class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" name="searchTerm" th:value="${searchTerm}">
+                </form>
+            </section>
+            <!== Button ==>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
         <!== Drop Down ==>
         <div class="collapse navbar-collapse mt-3 mt-lg-0" id="navbarNavDropdown">
             <!==== Nav Links ====>
             <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
-                <!===== Search Bar =====>
-                <li class="">
+                <!===== Search Bar Large and Up =====>
+                <li class="d-none d-lg-block">
                     <form id="searchForm" role="search" th:action="@{/welcome-page}" method="post" class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" name="searchTerm" th:value="${searchTerm}">
                     </form>
@@ -76,7 +84,7 @@
             <section class="left-arrow d-none d-lg-block"><i class="fa-solid fa-angle-left"></i></section>
             <section class="right-arrow d-none d-lg-block"><i class="fa-solid fa-angle-right"></i></section>
             <!===== Book Section =====>
-            <section class="d-flex overflow-scroll container position-relative" >
+            <section class="d-flex overflow-scroll container-fluid container-lg position-relative" >
                 <section class="mx-3 book-container" th:each="book:${ThrillerBooks}">
                     <img th:src="${book.getCover_page()}" th:alt="${book.getTitle()}" class="cover-page ">
                     <p class="book-info-container">
@@ -121,7 +129,7 @@
             <section class="left-arrow d-none d-lg-block"><i class="fa-solid fa-angle-left"></i></section>
             <section class="right-arrow d-none d-lg-block"><i class="fa-solid fa-angle-right"></i></section>
             <!===== Book Section =====>
-            <section class="d-flex overflow-scroll container position-relative" >
+            <section class="d-flex overflow-scroll container-fluid container-lg position-relative" >
                 <section class="mx-3 book-container" th:each="book:${FictionBooks}">
                     <img th:src="${book.getCover_page()}" th:alt="${book.getTitle()}" class="cover-page ">
                     <p class="book-info-container">
