Started Styling the Single book page

--- a/src/main/resources/static/css/myStylesheet.css
+++ b/src/main/resources/static/css/myStylesheet.css
@@ -2,6 +2,7 @@
 @import "signinStylesheet.css";
 @import "mainPageStylesheet.css";
 @import "searchBookResultsStylesheet.css";
+@import "singleBookStyleSheet.css";
 
 
 
