--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -8,27 +8,33 @@
 <nav th:replace="partials/loginNavbar :: LoggedIn-Navbar"></nav>
 
 
-<div class="container d-flex row mx-auto py-5 border border-5 border-danger">
+<main class="container-fluid container-lg mx-auto d-flex row py-5 border border-5 border-danger p-0 m-0">
     <!=== Book image Section ===>
-    <section class="col d-flex justify-content-center">
+    <section class="col-12 col-md-5 col-lg-4 mx-auto d-flex flex-column">
         <img th:src="${singleBookInfo.getCover_page()}" th:alt="${singleBookInfo.getTitle()}" id="single-book-cover">
+        <a th:href="${singleBookInfo.getGoogle_play()}" class="btn btn-success mt-3">Purchase Ebook</a>
     </section>
     <!=== Book Information Section ===>
-    <section class="col-7">
+    <section class="col col-md-7 col-lg-8 px-3 px-md-5   mx-auto single-book-information-container">
         <p th:text="${singleBookInfo.getTitle()}" id="single-book-title">title of Book</p>
         <p th:text="${singleBookInfo.getAuthor()}" class="single-book-author">Author</p>
-        <aside th:switch="${singleBookInfo.getRating()}">
+        <section th:switch="${singleBookInfo.getRating()}" class="py-3">
             <img th:case="'0'" th:src="@{/img/ratings/noStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
             <img th:case="'1'" th:src="@{/img/ratings/oneStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
             <img th:case="'2'" th:src="@{/img/ratings/twoStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
             <img th:case="'3'" th:src="@{/img/ratings/threeStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
-            <img th:case="'4'" th:src="@{/img/ratings/fourStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
+            <img th:case="'4'" th:src="@{/img/ratings/fourStars.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
             <img th:case="'5'" th:src="@{/img/ratings/fiveStars.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
-        </aside>
-        <p th:text="${singleBookInfo.getDescription()}">description</p>
-        <p th:text="${singleBookInfo.getGenre()}" class="single-book-genre">Genre</p>
+        </section>
+        <p th:text="${singleBookInfo.getDescription()}" class="single-book-description">description</p>
+        <p th:text="${singleBookInfo.getGenre()}" class="single-book-genre mt-4">Genre</p>
+        <p class="single-book-page-count pt-4 pb-2"><span th:text="${singleBookInfo.getPage_count()}"></span> pages</p>
+        <p class="single-book-page-date pb-2">First published <span th:text="${singleBookInfo.getDate_published()}"></span></p>
+        <p class="single-book-page-ISBN">ISBN: <span th:text="${singleBookInfo.getIsbn()}"></span>ISBN</p>
     </section>
-</div>
+</main>
+
+<!=== Similar Books ===>
 
 
 
