Stylesheet created for User Profile

--- a/src/main/resources/static/css/myStylesheet.css
+++ b/src/main/resources/static/css/myStylesheet.css
@@ -3,6 +3,7 @@
 @import "mainPageStylesheet.css";
 @import "searchBookResultsStylesheet.css";
 @import "singleBookStyleSheet.css";
+@import "userProfileStylesheet.css";
 
 
 
