--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -1,171 +1,179 @@
-.user-info-container{
+/*======= Left Side Container =======*/
+#left-side-user-info-container{
     background: #209dd8;
     height: 100vh;
     color: #fff;
+}
+/*=== Profile Picture Container ===*/
+#left-side-user-info-container section:first-child {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    padding: 63px 0 24px 0;
 }
-.user-info-container aside:first-child{
-    /*display: flex;*/
-    /*justify-content: center;*/
-    margin: 24px 0;
-    border: 5px solid white;
-    width:100%;
-}
-.user-info-container .user-profile-picture{
+/*=== Profile Picture ===*/
+#left-side-user-info-container .user-profile-picture{
     width: 240px;
     height: 340px;
     object-fit: cover;
     border-radius: 25px;
 }
-.user-info-container aside:first-child{
-    display: flex;
-    justify-content: center;
-
+/*=== Username & Bio Container ===*/
+#left-side-user-info-container .user-details-container{
+    text-align: center;
 }
-.user-info-container .user-username{
-    text-transform: capitalize;
+/*=== User's Username ===*/
+#left-side-user-info-container .user-details-container .user-username{
     font-weight: 600;
-    font-size: 24px;
-    text-align: center;
+    /*font-size: 24px;*/
+    font-size: 32px;
+    text-transform: capitalize;
+}
+/*=== User's Bio ===*/
+#left-side-user-info-container .user-details-container .user-bio{
+    margin: 0 10px;
 }
 
-.user-info-container .user-bio{
-    width: 80%;
-    max-width: 240px;
-    margin: 0 auto;
-    text-align: center;
+/*====== Screen smaller then 991px ======*/
+@media (max-width: 991px){
+    /*=== Profile Picture ===*/
+    #left-side-user-info-container .user-profile-picture{
+        width: 220px;
+        height: 280px;
+        object-fit: cover;
+        border-radius: 25px;
+    }
+    /*=== User's Username ===*/
+    #left-side-user-info-container .user-details-container .user-username{
+        font-size: 24px;
+    }
 }
 
-/*=====The Start of Right side Reviews =====*/
+/*=== Screen smaller then 768px ===*/
+@media (max-width: 768px){
+}
 
-main div .user-profile-right-side{
+/*=== Screen smaller then 575px ===*/
+@media (max-width: 575px){
+    /*=== Left Side Container ===*/
+    #left-side-user-info-container{
+        height: auto;
+        display: flex;
+        padding: 24px;
+    }
+    /*=== Profile Picture Container ===*/
+    #left-side-user-info-container section:first-child {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+    }
+    /*=== Profile Picture ===*/
+    #left-side-user-info-container .user-profile-picture{
+        width: 140px;
+        height: 200px;
+    }
+    /*=== Username & Bio Container ===*/
+    #left-side-user-info-container .user-details-container{
+        text-align: left;
+        padding-top: 24px;
+        padding-left: 24px;
+    }
+    /*=== User's Bio ===*/
+    #left-side-user-info-container .user-details-container .user-bio{
+        margin: 0;
+    }
+}
+
+
+
+/*========= Right Side Container =========*/
+#right-side-user-reviews-container{
+    background: rgba(154, 182, 222, 0.27);
+    padding-top: 42px;
     height: 100vh;
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
-
-.user-profile-right-side .section-title{
-    padding-top: 42px;
-    padding-bottom: 0;
+#right-side-user-reviews-container div:nth-child(2){
+    display: flex;
+    justify-content: space-evenly;
 }
 
-
-/*=== User Reviews Container ===*/
-.user-profile-reviews{
+/*=== User Review Container ===*/
+#right-side-user-reviews-container .user-reviews-container{
     background-color: rgba(32, 157, 216, 0.15);
-    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-    padding: 10px;
+    margin: 24px 0;
     border-radius: 15px;
-    display: flex;
-    margin-bottom: 24px;
-    /*width: 90%;*/
-    /*max-width: 640px;*/
-    margin-left: auto;
-    margin-right: auto;
+    padding: 10px;
+}
+
+/*=== Book Cover, Book Title, Author Container ===*/
+#right-side-user-reviews-container .user-reviews-container section:first-child{
+    line-height: normal;
+}
+
+/*=== Review Container ===*/
+#right-side-user-reviews-container .user-reviews-container section:nth-child(2){
     position: relative;
 }
 
-/*== Book Cover Title and Author Container ==*/
-.user-profile-reviews section:first-child{
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-weight: 600;
-    line-height: normal;
+/*=== Edit Delete Button ===*/
+#right-side-user-reviews-container .user-reviews-container section:nth-child(2) aside{
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
-/*=== User Reviews Book IMG ===*/
-.user-profile-reviews .user-profile-book-cover{
+/*=== Edit Delete Button ===*/
+#right-side-user-reviews-container .user-reviews-container section:nth-child(2) aside img{
+    width: 20px;
+    height: auto;
+}
+
+/*=== Book Cover ===*/
+#right-side-user-reviews-container .user-reviews-container .user-profile-book-cover{
     height: auto;
     width: 80px;
     border-radius: 12px;
     margin-bottom: 12px;
 }
-.user-review-author{
-    font-weight: 400;
+
+/*=== Book Title ===*/
+#right-side-user-reviews-container .user-reviews-container .user-review-book-title{
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+    font-size: 14px
 }
 
-/*== Review Title, Rating, and Body Container ==*/
-.user-profile-reviews section:nth-child(2){
-    padding-top: 1em;
-    position: relative;
+/*== Review Title ==*/
+.user-review-title{
+    padding: 0;
+    margin: 0;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 /*== Book Rating ==*/
 .user-review-book-rating{
     height: 20px;
     width: auto;
+    padding: 0 0 0 0;
+    margin: 0 0 12px 0;
 }
-
-.user-profile-reviews aside{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-}
-.user-profile-reviews aside img{
-    width: 30px;
-    height: auto;
-}
-
-
-.user-profile-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-}
-
 
 
 /*====== Screen smaller then 991px ======*/
 @media (max-width: 991px){
-
-
+    /*=== Section Title - Review ===*/
+    #right-side-user-reviews-container .section-title{
+       padding: 0;
+        margin: 0;
+    }
 }
 
 /*=== Screen smaller then 768px ===*/
 @media (max-width: 768px){
-    .user-info-container{
-        height: auto;
-    }
-    .user-info-container aside:first-child{
-        display: flex;
-        justify-content: end;
-    }
-    .user-info-container .user-information{
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-    }
-    .user-info-container .user-bio{
-        width: 280px;
-        margin: 0;
-    }
-
-    .user-info-container .user-profile-picture{
-        width: 140px;
-        height: 200px;
-        object-fit: cover;
-        border-radius: 25px;
-    }
-    .user-info-container h2{
-        font-size: 24px;
-    }
-    .user-info-container .user-bio{
-        font-size: 14px;
-    }
-
-/*    */
-    main div .user-profile-right-side{
-        height: 65vh;
-        width: 100%;
-        overflow-y: scroll;
-        scroll-behavior: smooth;
-    }
 }
 
 /*=== Screen smaller then 575px ===*/
 @media (max-width: 575px){
-
 }
