--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -22,10 +22,12 @@
             <!=== User Details ===>
             <section class="user-details-container">
                 <h2 class="user-username"> Hello <span th:text="${user.getUsername()}">username</span></h2>
-                <p class="user-bio" th:text="${user.getBio().substring(0, 1).toUpperCase() + user.getBio().substring(1)}"></p>
-                <aside th:each="favoriteGenre : ${favoriteGenres}">
-                    <span th:text="${favoriteGenre.genre.name}"></span>
+                <aside class="user-fav-genre-container" >
+                    <small>Favorite Genre:</small>
+                    <span th:each="favoriteGenre : ${favoriteGenres}" th:text="${favoriteGenre.genre.name}"></span>
                 </aside>
+                <p class="user-bio" th:text="${user.getBio().substring(0, 1).toUpperCase() + user.getBio().substring(1)}"></p>
+
             </section>
         </div>
 
